; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_u_audio.c_u_audio_stop_playback.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_u_audio.c_u_audio_stop_playback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.g_audio = type { i32, %struct.snd_uac_chip* }
%struct.snd_uac_chip = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @u_audio_stop_playback(%struct.g_audio* %0) #0 {
  %2 = alloca %struct.g_audio*, align 8
  %3 = alloca %struct.snd_uac_chip*, align 8
  store %struct.g_audio* %0, %struct.g_audio** %2, align 8
  %4 = load %struct.g_audio*, %struct.g_audio** %2, align 8
  %5 = getelementptr inbounds %struct.g_audio, %struct.g_audio* %4, i32 0, i32 1
  %6 = load %struct.snd_uac_chip*, %struct.snd_uac_chip** %5, align 8
  store %struct.snd_uac_chip* %6, %struct.snd_uac_chip** %3, align 8
  %7 = load %struct.snd_uac_chip*, %struct.snd_uac_chip** %3, align 8
  %8 = getelementptr inbounds %struct.snd_uac_chip, %struct.snd_uac_chip* %7, i32 0, i32 0
  %9 = load %struct.g_audio*, %struct.g_audio** %2, align 8
  %10 = getelementptr inbounds %struct.g_audio, %struct.g_audio* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @free_ep(i32* %8, i32 %11)
  ret void
}

declare dso_local i32 @free_ep(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
